--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Small description of the service
+Description=Zitadele
 After=network.target
 
 [Service]
@@ -7,7 +7,8 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/script
+
+ExecStart=__INSTALL_DIR__/zitadel start-from-init --masterkey "MasterkeyNeedsToHave32Characters" --tlsMode disabled
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
 
