--- a/conf/.env
+++ b/conf/.env
@@ -1,3 +1,6 @@
+ZITADEL_PORT=__PORT__
+ZITADEL_EXTERNALDOMAIN=__DOMAIN__
+
 ZITADEL_DATABASE_POSTGRES_HOST=localhost
 ZITADEL_DATABASE_POSTGRES_PORT=5432
 ZITADEL_DATABASE_POSTGRES_DATABASE=__DB_NAME__
@@ -8,3 +11,4 @@ ZITADEL_DATABASE_POSTGRES_ADMIN_USERNAME=root
 ZITADEL_DATABASE_POSTGRES_ADMIN_PASSWORD=postgres
 ZITADEL_DATABASE_POSTGRES_ADMIN_SSL_MODE=disable
 ZITADEL_EXTERNALSECURE=false
+ZITADEL_TELEMETRY_ENABLED=false
