--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,7 +7,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
-
+EnvironmentFile=__INSTALL_DIR__/.env
 ExecStart=__INSTALL_DIR__/zitadel start-from-init --masterkey "MasterkeyNeedsToHave32Characters" --tlsMode disabled
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
