--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,7 +8,7 @@ User=__APP__
 Group=__APP__
 WorkingDirectory=__INSTALL_DIR__/
 EnvironmentFile=__INSTALL_DIR__/.env
-ExecStart=__INSTALL_DIR__/zitadel start-from-init --masterkey "MasterkeyNeedsToHave32Characters" --tlsMode disabled
+ExecStart=__INSTALL_DIR__/zitadel start-from-init --masterkey "__KEY__" --tlsMode disabled
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
 
